# ChangeLog for gnome-extra/tasks
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/tasks/ChangeLog,v 1.15 2012/05/05 06:25:15 jdhore Exp $

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> tasks-0.19.ebuild,
  tasks-0.20.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  05 Mar 2012; Brent Baude <ranger@gentoo.org> tasks-0.20.ebuild:
  Marking tasks-0.20 ppc stable for bug 393007

  14 Jan 2012; Markus Meier <maekke@gentoo.org> tasks-0.20.ebuild:
  x86 stable, bug #393007

  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> tasks-0.20.ebuild:
  amd64 stable, bug 393007

*tasks-0.20 (08 Nov 2011)

  08 Nov 2011; Gilles Dartiguelongue <eva@gentoo.org> +tasks-0.20.ebuild:
  Version bump.

  27 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org> -tasks-0.16.ebuild,
  -tasks-0.18.ebuild, tasks-0.19.ebuild:
  Pin libunique dependency to slot 1. Clean up old revisions.

*tasks-0.19 (21 Feb 2011)

  21 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org> +tasks-0.19.ebuild:
  Version bump. Translation updates.

*tasks-0.18 (23 Nov 2010)

  23 Nov 2010; Gilles Dartiguelongue <eva@gentoo.org> +tasks-0.18.ebuild:
  Version bump. Fix build with various gtk+ revisions, CLI enhancements, better
  handling of non-ASCII task notes and more.

  08 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org> -tasks-0.14.ebuild:
  Clean up old revision.

  29 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> tasks-0.16.ebuild,
  +files/tasks-0.16-asneeded.patch:
  Fix building testsuite with -Wl,--as-needed wrt #294878 by Kacper Kowalik.

  06 Sep 2009; Gilles Dartiguelongue <eva@gentoo.org> tasks-0.16.ebuild:
  Remove commented src_prepare.

*tasks-0.16 (06 Sep 2009)

  06 Sep 2009; Gilles Dartiguelongue <eva@gentoo.org> -tasks-0.13.ebuild,
  +tasks-0.16.ebuild:
  Version bump. Magic pattern support. Add an edit cli switch. Translation
  updates. Port to new gtk/glib APIs. Clean up old revision.
