@@ -1,8 +1,16 @@
-AUX tasks-0.14-configh.patch 240 RMD160 81cd792da95eecc8c048eea2c76c2752d0af168a SHA1 a35cd50e35445ce5b7874d082a3550197869b58e SHA256 0de224e7e8c2d1554a99bc92d939fadbde121b84811da6b2c2a5786ed81c417b
-AUX tasks-0.16-asneeded.patch 1581 RMD160 b6bb73fd5f02b5d1442242baedf13706f4025fdc SHA1 760bffb50b787548d05d0a121c2528a013dc2336 SHA256 96626b73c1a523750d0d7064b0429eb7f4449773649d3ce3ed2c12f85218a30d
-DIST tasks-0.19.tar.gz 298920 RMD160 a4e936e51f5ef82c57a834d3a10dc4c9606a60a4 SHA1 69577e4fa52168beaf6bf162d61b605542c8fe9b SHA256 1a7fdc5f95a2193a1a25fdb13f071867fb7e42245ce19ccee4bcccb69e557f2e
-DIST tasks-0.20.tar.xz 189244 RMD160 77a9f2afd377f0e0b26939feb797d0333e1f3cbe SHA1 ce91890c9e2d37738ab6bce061ecb2b0b6dcb823 SHA256 fa99ab3cda4d4ea253d67bbed51b54fb0959db27ae50508196cdffdc868d69d2
-EBUILD tasks-0.19.ebuild 899 RMD160 212ad3a44ac217f297239781962388b3af27fbc7 SHA1 98cd7fc03d715bdf1d52770995b0682efd80d094 SHA256 0631c4b29f4c008edd1f15ca960eb50808122075ea9b427b2ba878a0fe8c9c08
-EBUILD tasks-0.20.ebuild 833 RMD160 404250a4d1bda89ca20eefd3a375012ab867f362 SHA1 df184871436919f2e54035fe3202a9226f7f1e54 SHA256 05c7ad743043c0309044802f3f0d3a00edef6733e5a2e55fc0bd98e289cd3b96
-MISC ChangeLog 2489 RMD160 ba18e30128448a1cde2a28c161e4d65535569d36 SHA1 5fd5e6439ce15b5b26d1c9a557c25d0d384a5e8c SHA256 4a3c860f1cfdf6c457b96abcf7ffe61c46157f8ab0b5a0b29d6c778ec7751a1a
-MISC metadata.xml 583 RMD160 1b65121b81b950ca4c2b03e3a98396e4a6a87906 SHA1 91c9b971ae53776cce2357fbcc5b2d0ebde8d1e2 SHA256 d219c719a681123dca2d3704a72c276dcdfeef3c65d5287f614b46b82e9d4351
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX tasks-0.14-configh.patch 240 SHA256 0de224e7e8c2d1554a99bc92d939fadbde121b84811da6b2c2a5786ed81c417b SHA512 193caab627746f20a54c46128e0798c8cc90d215cd336b3e1540e57ae0fbd8175f30bb0ccffdb369e6161c21439db1cf1b7c87539f83d6f81c484b95ccaa45f8 WHIRLPOOL 2e755454bd234dc2bbf9f0233e548e34a37ace4b47aa7ed31373cca5dbce8e3d81c0fe0c32d7723d52743cd80d7ed34b83761920b010279c4354a988ad57dd63
+AUX tasks-0.16-asneeded.patch 1581 SHA256 96626b73c1a523750d0d7064b0429eb7f4449773649d3ce3ed2c12f85218a30d SHA512 42ffa3fb8d9849b43a579241689d02053ae1739635e8143c6aea1593e975f365cb7e5ad905e648acbb1d0f3159f01f8b87c7ef895f8409bc8920572a377198f5 WHIRLPOOL 5b42dd9c6c44fc8030a9311d521ce5f1d95d73338ff3e266fe772b5e87d46f5a14bd1ddd3672431cf2ce03f2b5d22783b16da223c3d5a987aad9ac947b85434d
+DIST tasks-0.20.tar.xz 189244 SHA256 fa99ab3cda4d4ea253d67bbed51b54fb0959db27ae50508196cdffdc868d69d2
+EBUILD tasks-0.20.ebuild 833 SHA256 05c7ad743043c0309044802f3f0d3a00edef6733e5a2e55fc0bd98e289cd3b96 SHA512 8cc3a979782ceebdbd5813fff7bfe31f5fd33ccb8a5462ce57bd6c8fef36860d34f76f8bf3559c4e27ddc9ac5e1f61032d11d3dce83d8a113be74f9d4b23f3a9 WHIRLPOOL 266347d713399a3ed6d96756322fee47769ebed5fbc9a1df1bbed0f64853b87e3029f906c1e2d6be2d451c8e965f062dbcde04f9a5fbc5300411608a23e60df1
+MISC ChangeLog 2586 SHA256 786b795c429e5104b55d26c80e72f0fb8d31682927341cd2c9a67edb7ca13ed5 SHA512 7f841b1b8b11060e7d1fd46e5e3a23118af565168cf23ed583e5f4f50bb0fa6fa97bbee9c854abc7d973e3f9ff9b76d48b1f91fc5a2489d3c7ca9a5b90508df6 WHIRLPOOL b79d00a70a8f45b62159788ba93df5eead4c06b0697fcb579f33a2a412a077f574a6ba4bbf75dd7450d2dcf8bb0a1e95e296eaf672513ba20eba0ca2aa629f6a
+MISC metadata.xml 583 SHA256 d219c719a681123dca2d3704a72c276dcdfeef3c65d5287f614b46b82e9d4351 SHA512 56ad687118c609974c0b6d18be8ab238fff1300535c5253b193f7fa9442d58d69ef9700a81a00f772d2faadaf3df8a2f66bd20c962dc1348261197dbe0069c1f WHIRLPOOL 939fa03fed65ee15089a412aad8176e8321c51bf8048b0ccd163a686b9edf9b33544c5ebed7a7dc637516eb63b39e16846988d0c3e789c9a4bfaa2ab3afab56d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlFYQ1gACgkQ1fmVwcYIWAZJCACgySq265aMbR7+z3ug7lIkfHMQ
+FloAnj/brTSLZuuuUvnsxl+Nyq6NE5/Z
+=Wb1F
+-----END PGP SIGNATURE-----
