@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/tasks
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/tasks/ChangeLog,v 1.15 2012/05/05 06:25:15 jdhore Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/tasks/ChangeLog,v 1.16 2013/03/31 14:08:23 eva Exp $
+
+  31 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> -tasks-0.19.ebuild:
+  Clean up old revision.
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> tasks-0.19.ebuild,
   tasks-0.20.ebuild:
